--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a:focus {
     border: 1px solid #cccccc;
     margin: 1.125em auto;
     padding: 1.125em;
-    max-width: 1152px;
+    max-width: 73.125em;
 }
 
 .site-branding {
