--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ a:focus {
 }
 
 .site-content {
+    border: 1px solid red;
     margin: 1.125em 0;
 }
 
@@ -59,4 +60,14 @@ a:focus {
     grid-gap: 1.125em;
     padding: 1.125em;
     text-align: center;
+}
+
+.content-area {
+    float: left;
+    width: 
+}
+
+.sidebar {
+    float: right;
+    width: 
 }
