--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ a:focus {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1.125em;
+    margin: 2em;
 }
 
 .content-area {
@@ -77,7 +78,7 @@ a:focus {
 }
 
 .entry-content {
-    margin: 2em 0;
+    margin: 0;
 }
 
 .entry-content .site-name {
