--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ a:focus {
 .entry-content .site-name {
     display: block;
     font-size: 1.250em;
+    font-weight: 700;
     margin-bottom: 0.5em;
     text-align: center;
 }
