--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,9 @@ a:focus {
 
 .box {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1.125em;
-    margin: 2em;
+    margin-top: 2em
 }
 
 .content-area {
