--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ a:focus {
 .site-container {
     background: #ffffff;
     border: 1px solid #cccccc;
-    margin: 1.5em auto;
+    margin: 1.5em auto 0.5em auto;
     padding: 1.125em;
     max-width: 72em;
 }
