--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,20 @@ a:focus {
   	padding: 1em;
 }
 
+.navigation {
+    padding: 0.5em;
+    text-align: center;;
+}
+
 .navigation ul {
     display: block;
     list-style: none;
     margin: 0;
+}
+
+.navigation li {
+    display: inline-block;
+    padding: 0.5em 1em;
 }
 
 .site-content {
