modify primary navigation

--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -544,7 +544,11 @@ figure {
     display: block;
     list-style: none;
     margin: 0;
-    padding: 0;
+}
+
+.primary-navigation li {
+    display: inline-block;
+    padding: 0.5em 1em;
 }
 
 /**
