--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -524,6 +524,14 @@ figure {
 /**
  *  7.0 - Clearings
  */
+.site-container:before,
+.site-container:after,
+.site-content:before,
+.site-content:after {
+  clear: both;
+  content: "";
+  display: table;
+}
 
 /**
  *  8.0 - Navigation (Links)
