--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -609,7 +609,8 @@ figure {
 }
 
 .background-image {
-  background: url("framework/assets/images/header-image.jpg");
+  background: url('/framework/assets/images/header-image.jpg');
+  padding: 10em 0;
 }
 
 /**
