--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -610,16 +610,17 @@ figure {
 
 .background-image {
   background: url('/framework/assets/images/header-image.jpg');
-  padding: 10em 0;
+  margin: 0;
+  padding: 8em 0;
   text-align: center;
 }
 
 .background-image .background-title {
   color: #ffffff;
-  font-size: 3em;
+  font-size: 5em;
 }
 
-.background-image .background-title {
+.background-image .background-description {
   color: #ffffff;
 }
 
